--- a/to_do/requirements.txt
+++ b/to_do/requirements.txt
@@ -27,9 +27,7 @@ django-rest-auth==0.9.5
 django-rest-swagger==2.2.0
 django-templated-mail==1.1.1
 djangorestframework==3.12.4
-djangorestframework-jwt==1.11.0
-djangorestframework-simplejwt==4.8.0
-djoser==2.1.0
+djangorestframework-simplejwt==2
 drf-yasg==1.20.0
 drf-yasg2==1.19.4
 executing==0.8.2
@@ -51,7 +49,6 @@ platformdirs==2.4.0
 psycopg2-binary==2.9.2
 pycparser==2.21
 Pygments==2.10.0
-PyJWT==2.3.0
 pyparsing==2.4.7
 python-social-auth==0.3.6
 python3-openid==3.2.0
